fix alignment

--- a/assets/style/iframecss.css
+++ b/assets/style/iframecss.css
@@ -2,5 +2,6 @@
 #frameHolder {
 	width:1280;
 	margin-left:auto;
-	margin-right:auto
+	margin-right:auto;
+
 }
